[metadata]
name = pyyjson
description = yyjson for Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/0ph1uch1/pyyjson
author = Antares0982, Eritque arcus
license_files = LICENSE
platforms = any
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: C
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
download_url = https://github.com/0ph1uch1/pyyjson
project_urls =
    Source=https://github.com/0ph1uch1/pyyjson

[options]
python_requires = >=3.8
setup_requires =
    setuptools-scm
